feat: Added filter service dropdown component
feat: Added responsive design to service dropdown

feat: Update utility name for getUserLocation to addGeolocateControl and update the imports in useMapBox hook

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -96,3 +96,10 @@ ul {
     height: 450px;
   }
 }
+
+/* Medium devices (tablets, 768px and up) */
+@media (max-width: 768px) {
+  .filter__service___dropdown {
+    width: 100% !important;
+  }
+}
